update plugins, add dev faq, fix gradle-versions-plugin exclusion list