@@ -11,7 +11,7 @@ fun properties(key: String) = project.findProperty(key).toString()
 plugins {
     id("java")
     id("jacoco")
-    id("org.jetbrains.intellij") version "1.7.0" // https://github.com/JetBrains/gradle-intellij-plugin https://lp.jetbrains.com/gradle-intellij-plugin/
+    id("org.jetbrains.intellij") version "1.8.0" // https://github.com/JetBrains/gradle-intellij-plugin https://lp.jetbrains.com/gradle-intellij-plugin/
     id("com.github.ben-manes.versions") version "0.42.0" // https://github.com/ben-manes/gradle-versions-plugin
     id("com.adarshr.test-logger") version "3.2.0" // https://github.com/radarsh/gradle-test-logger-plugin
     id("com.jaredsburrows.license") version "0.9.0" // https://github.com/jaredsburrows/gradle-license-plugin
@@ -128,7 +128,10 @@ tasks {
             }
         }
         outputFormatter = closureOf<Result> {
-            unresolved.dependencies.removeIf { it.group.toString() == "unzipped.com.jetbrains.plugins" }
+            unresolved.dependencies.removeIf {
+                val coordinates = "${it.group}:${it.name}"
+                coordinates.startsWith("unzipped.com") || coordinates.startsWith("com.jetbrains:ideaI")
+            }
             val plainTextReporter = PlainTextReporter(project, revision, gradleReleaseChannel)
             val writer = StringWriter()
             plainTextReporter.write(writer, this)
@@ -138,7 +141,6 @@ tasks {
     runIde {
         jvmArgs("-Xms128m")
         jvmArgs("-Xmx1024m")
-        jvmArgs("--add-exports", "java.desktop/sun.awt.windows=ALL-UNNAMED")
         autoReloadPlugins.set(true)
     }
     runPluginVerifier {
